# handlers.go
@@ -6,6 +6,7 @@ import (
 	"fmt"
 	"log"
 	"net/http"
+	"strings"
 
 	"github.com/go-redis/redis/v8"
 )
@@ -56,4 +57,36 @@ func getMatchesByStatusHandler(rdb *redis.Client, w http.ResponseWriter, r *http
 	} else {
 		json.NewEncoder(w).Encode(returnMatches)
 	}
+}
+
+// GetMatchByIdHandler retrieves matches by status
+// @Summary Retrieve match details by match ID
+// @Description Get match details by given match ID
+// @Tags match
+// @Param id path string true "Match ID"
+// @Success 200 {object} Match
+// @Failure 400 {object} map[string]string
+// @Failure 500 {object} map[string]string
+// @Router /api/v1/match/{id} [get]
+func getMatchByIdHandler(rdb *redis.Client, w http.ResponseWriter, r *http.Request) {
+
+	ctx := context.Background()
+
+	fmt.Println("The URL is:" + r.URL.Path)
+	matchId := strings.TrimPrefix(r.URL.Path, "/api/v1/match/")
+
+	fmt.Println("Match ID:" + matchId)
+	if matchId == "" {
+		http.Error(w, "Match ID is required", http.StatusBadRequest)
+		return
+	}
+	foundMatch, err := getMatchById(ctx, rdb, matchId)
+	if err != nil {
+		fmt.Println("Cant not fetch match")
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+
+	json.NewEncoder(w).Encode(foundMatch)
+
 }
